<resources>
    <string name="app_name">Kalkulator</string>
    <string name="calculator_title">KALKULATOR</string>
    <string name="default_result">0</string>
    <string name="hint_first_number">Enter first number</string>
    <string name="hint_second_number">Enter second number</string>
    <string name="button_add">Penjumlahan</string>
    <string name="button_subtract">Pengurangan</string>
    <string name="button_multiply">Perkalian</string>
    <string name="button_divide">Pembagian</string>
</resources>